k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservices
  template:
    metadata:
      labels:
        app: authservices
    spec:
      containers:
      - name: authservices
        image: faniadev/authservices:latest
---
apiVersion: v1
kind: Service
metadata:
  name: auths-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: authservices
  ports:
  - name: authservices
    protocol: TCP
    port: 80
    targetPort: 80
