k8s/enrollments-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: enrollmentservices-srv
spec:
  type: NodePort
  selector:
    app: enrollmentservices
  ports:
  - name: enrollmentservices
    protocol: TCP
    port: 80
    targetPort: 80
