k8s/payments-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: paymentservice-srv
spec:
  type: NodePort
  selector:
    app: paymentservice
  ports:
  - name: paymentservice
    protocol: TCP
    port: 80
    targetPort: 80
