k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: studikasus.com
      http:
        paths:
          - path: /api/enrollments
            pathType: Prefix
            backend:
              service:
                name: enrollments-clusterip-srv
                port:
                  number: 80
          - path: /api/p/enrollments
            pathType: Prefix
            backend:
              service:
                name: payments-clusterip-srv
                port:
                  number: 80
